# aws-cluster-up

./: Makefile.am  README.md  configure.ac
ASG/: upgrade.md
examples/: us-east-1.env
examples/aws/: us-east-1.bash
examples/aws/ocp-3.10/: multi-master.inventory  multi-master.tf  single-master-asg.inventory  single-master-asg.tf  single-master.inventory  single-master.tf
examples/aws/ocp-3.11/: single-master.inventory
examples/aws/origin-3.10/: single-master.inventory
examples/aws/origin-3.11/: single-master.inventory  single-master.tf
examples/aws/origin-3.9/: single-master.inventory  single-master.tf
examples/ocp3.10/aws/: multi-master.inventory  multi-master.tf  single-master-asg.tf  single-master.inventory  single-master.tf
libexec/aws-cluster-up/: common.bash  self-check
share/: defaults.bash
share/examples/ocp3.10/: multi-master.inventory  multi-master.tf  single-master-asg.tf  single-master.inventory  single-master.tf
share/inventory/: ocp3.10  ocp3.9
share/terraform/: 3node-cluster  multi-node-cluster
