EXTRA_DIST =					\
	README.md				\
	bootstrap.sh				\
	libexec

dist_bin_SCRIPTS =				\
	bin/acu-destroy				\
	bin/acu-dwim				\
	bin/acu-generate-hosts			\
	bin/acu-generate-inventory		\
	bin/acu-generate-ssh-config		\
	bin/acu-launch

nobase_dist_pkgdata_DATA =				\
	examples/aws/origin-3.9/single-master.inventory	\
	examples/aws/origin-3.9/single-master.tf	\
	examples/aws/ocp-3.10/multi-master.inventory	\
	examples/aws/ocp-3.10/multi-master.tf		\
	examples/aws/ocp-3.10/single-master-asg.tf	\
	examples/aws/ocp-3.10/single-master.inventory	\
	examples/aws/ocp-3.10/single-master.tf		\
	examples/aws/ocp-3.11/single-master.inventory	\
	examples/aws/ocp-3.11/single-master.tf		\
	examples/aws/us-east-1.bash

pkglibexec_SCRIPTS =				\
	libexec/aws-cluster-up/common.bash	\
	libexec/aws-cluster-up/self-check
